# Scrabble-SK2

./: CMakeLists.txt
client/: CMakeLists.txt  README.md
client/assets/: dictionary.txt
client/headers/: Client.h  Engine.h  Game.h  Grid.h  Lobby.h  MainMenu.h  MousePos.h  Player.h  Server.h  WaitingRoom.h
client/source/: Client.cpp  Engine.cpp  Game.cpp  Grid.cpp  Lobby.cpp  MainMenu.cpp  MousePos.cpp  Player.cpp  Server.cpp  WaitingRoom.cpp  main.cpp
server/: CMakeLists.txt
server/headers/: Client.h  Game.h  Player.h  WaitingRoom.h
server/source/: Client.cpp  Game.cpp  Player.cpp  WaitingRoom.cpp  main.cpp
